--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Mở Zalo</title>
+    <title>Zalo</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Zalo">
     <link rel="apple-touch-icon" href="zalo-icon.jpg">
-    <script>
-      window.location.href = "zalo://";
-    </script>
+    <meta http-equiv="refresh" content="0;url=zalo://">
   </head>
   <body>
     <p>Đang mở Zalo...</p>
