--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zalo</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Zalo">
-    <link rel="apple-touch-icon" href="zalo-icon.jpg">
+    <link rel="apple-touch-icon" href="zalo-icon-neon.jpg">
     <meta http-equiv="refresh" content="0;url=zalo://">
   </head>
   <body>
